feat: generator can now get non normals input

--- a/training_with_datagen.ipynb
+++ b/training_with_datagen.ipynb
@@ -11,12 +11,12 @@
     "\n",
     "On donne une carte de normale en entrée au réseau\n",
     "\n",
-    "Le dataset est générer dynamiquement par un générateur (les transformations également). Il suffit de donner les relevés, les cartes de normales et les masques de placement en paramètres."
+    "Le dataset est généré dynamiquement par un générateur (les transformations également). Il suffit de donner les relevés et les cartes de normales en paramètres."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -34,7 +34,37 @@
     "id": "YIEzoMfBORmZ",
     "outputId": "07d15406-50ab-4456-cddd-ee702da40e0d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thu Sep 11 15:09:01 2025       \n",
+      "+-----------------------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 560.35.03              Driver Version: 560.35.03      CUDA Version: 12.6     |\n",
+      "|-----------------------------------------+------------------------+----------------------+\n",
+      "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                                         |                        |               MIG M. |\n",
+      "|=========================================+========================+======================|\n",
+      "|   0  Quadro RTX 5000                Off |   00000000:73:00.0  On |                  Off |\n",
+      "| 33%   32C    P8             24W /  230W |     477MiB /  16384MiB |     46%      Default |\n",
+      "|                                         |                        |                  N/A |\n",
+      "+-----------------------------------------+------------------------+----------------------+\n",
+      "                                                                                         \n",
+      "+-----------------------------------------------------------------------------------------+\n",
+      "| Processes:                                                                              |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
+      "|        ID   ID                                                               Usage      |\n",
+      "|=========================================================================================|\n",
+      "|    0   N/A  N/A      3994      G   /usr/lib/xorg/Xorg                             39MiB |\n",
+      "|    0   N/A  N/A   1360916      G   /usr/lib/xorg/Xorg                            167MiB |\n",
+      "|    0   N/A  N/A   1361045      G   /usr/bin/gnome-shell                           93MiB |\n",
+      "|    0   N/A  N/A   1371227      G   /proc/self/exe                                160MiB |\n",
+      "+-----------------------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
    "source": [
     "!nvidia-smi"
    ]
@@ -50,15 +80,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 10 images in ./dataset/data_nino_limeuil/gravure\n",
+      "['56751-36-VERSO.png', '56751-28-VERSO.png', '56751-26-RECTO.png', '56751-28-RECTO.png', '56751-27-VERSO.png', '56751-37-RECTO.png', '56751-25-RECTO.png', '56751-31-RECTO.png', '56751-30-RECTO.png', '56751-35-RECTO.png']\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
-    "folder_to_search = \"./dataset/data_nino_limeuil/normale\"\n",
+    "folder_to_search = \"./dataset/data_nino_limeuil/gravure\"\n",
     "\n",
-    "DATA_NAMES = [f for f in os.listdir(folder_to_search) if f.endswith(\".png\")]\n",
+    "DATA_NAMES = [f for f in os.listdir(folder_to_search) if f.endswith(\".png\") or f.endswith(\".jpg\") or f.endswith(\".JPG\")]\n",
     "# DATA_NAMES = ['os_0.png', 'os_1.png', 'os_5.png', 'os_2.png', 'os_3.png']\n",
     "print(f\"Found {len(DATA_NAMES)} images in {folder_to_search}\")\n",
     "print(DATA_NAMES)"
@@ -66,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "executionInfo": {
      "elapsed": 6,
@@ -85,7 +124,7 @@
     "BATCH_SIZE = 16\n",
     "EPOCH_SIZE = 40\n",
     "PATCH_SIZE = 512\n",
-    "IMG_FOLDER = \"./dataset/data_nino_limeuil/normale\"\n",
+    "IMG_FOLDER = \"./dataset/data_nino_limeuil/one_light\"\n",
     "GROUNDTRUTH_FOLDER = \"./dataset/data_nino_limeuil/gravure\"\n",
     "PATCH_RATIO = 0.5 # for gravure dilation -> patch selection\n",
     "ROTATION_STEP = 10\n",
@@ -110,7 +149,97 @@
     },
     "id": "YtwlSXpxNcLR"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-09-11 15:09:03.045097: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-09-11 15:09:03.047159: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-09-11 15:09:03.088406: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-09-11 15:09:03.090673: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-09-11 15:09:03.863007: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Loaded image: 56751-36-VERSO.png from ./dataset/data_nino_limeuil/gravure\n",
+      "    Image shape: (3670, 5496, 1)\n",
+      "    Image min: 0.0, max: 1.0\n",
+      "* Loaded image: 56751-28-VERSO.png from ./dataset/data_nino_limeuil/gravure\n",
+      "    Image shape: (3670, 5496, 1)\n",
+      "    Image min: 0.0, max: 1.0\n",
+      "* Loaded image: 56751-26-RECTO.png from ./dataset/data_nino_limeuil/gravure\n",
+      "    Image shape: (3670, 5496, 1)\n",
+      "    Image min: 0.0, max: 1.0\n",
+      "* Loaded image: 56751-28-RECTO.png from ./dataset/data_nino_limeuil/gravure\n",
+      "    Image shape: (3670, 5496, 1)\n",
+      "    Image min: 0.0, max: 1.0\n",
+      "* Loaded image: 56751-27-VERSO.png from ./dataset/data_nino_limeuil/gravure\n",
+      "    Image shape: (3648, 4864, 1)\n",
+      "    Image min: 0.0, max: 1.0\n",
+      "* Loaded image: 56751-37-RECTO.png from ./dataset/data_nino_limeuil/gravure\n",
+      "    Image shape: (3670, 5496, 1)\n",
+      "    Image min: 0.0, max: 1.0\n",
+      "* Loaded image: 56751-25-RECTO.png from ./dataset/data_nino_limeuil/gravure\n",
+      "    Image shape: (3648, 4864, 1)\n",
+      "    Image min: 0.0, max: 1.0\n",
+      "* Loaded image: 56751-31-RECTO.png from ./dataset/data_nino_limeuil/gravure\n",
+      "    Image shape: (3670, 5496, 1)\n",
+      "    Image min: 0.0, max: 1.0\n",
+      "* Loaded image: 56751-30-RECTO.png from ./dataset/data_nino_limeuil/gravure\n",
+      "    Image shape: (3670, 5496, 1)\n",
+      "    Image min: 0.0, max: 1.0\n",
+      "* Loaded image: 56751-35-RECTO.png from ./dataset/data_nino_limeuil/gravure\n",
+      "    Image shape: (3670, 5496, 1)\n",
+      "    Image min: 0.0, max: 1.0\n",
+      "* Loaded image: 56751-36-VERSO.jpg from ./dataset/data_nino_limeuil/one_light\n",
+      "    Image shape: (3670, 5496, 3)\n",
+      "    Image min: 0.0, max: 255.0\n",
+      "* Loaded image: 56751-28-VERSO.jpg from ./dataset/data_nino_limeuil/one_light\n",
+      "    Image shape: (3670, 5496, 3)\n",
+      "    Image min: 0.0, max: 255.0\n",
+      "* Loaded image: 56751-26-RECTO.jpg from ./dataset/data_nino_limeuil/one_light\n",
+      "    Image shape: (3648, 5472, 3)\n",
+      "    Image min: 0.0, max: 255.0\n",
+      "* Loaded image: 56751-28-RECTO.jpg from ./dataset/data_nino_limeuil/one_light\n",
+      "    Image shape: (3648, 5472, 3)\n",
+      "    Image min: 0.0, max: 255.0\n",
+      "* Loaded image: 56751-27-VERSO.JPG from ./dataset/data_nino_limeuil/one_light\n",
+      "    Image shape: (3648, 4864, 3)\n",
+      "    Image min: 0.0, max: 255.0\n",
+      "* Loaded image: 56751-37-RECTO.jpg from ./dataset/data_nino_limeuil/one_light\n",
+      "    Image shape: (3670, 5496, 3)\n",
+      "    Image min: 0.0, max: 255.0\n",
+      "* Loaded image: 56751-25-RECTO.JPG from ./dataset/data_nino_limeuil/one_light\n",
+      "    Image shape: (3648, 4864, 3)\n",
+      "    Image min: 0.0, max: 255.0\n",
+      "* Loaded image: 56751-31-RECTO.jpg from ./dataset/data_nino_limeuil/one_light\n",
+      "    Image shape: (3670, 5496, 3)\n",
+      "    Image min: 0.0, max: 255.0\n",
+      "* Loaded image: 56751-30-RECTO.jpg from ./dataset/data_nino_limeuil/one_light\n",
+      "    Image shape: (3670, 5496, 3)\n",
+      "    Image min: 0.0, max: 255.0\n",
+      "* Loaded image: 56751-35-RECTO.jpg from ./dataset/data_nino_limeuil/one_light\n",
+      "    Image shape: (3670, 5496, 3)\n",
+      "    Image min: 0.0, max: 255.0\n",
+      "* Added padding to input images to match ground truth size.\n",
+      "* Found 2725497 valid patches in 56751-36-VERSO.png\n",
+      "* Found 1766276 valid patches in 56751-28-VERSO.png\n",
+      "* Found 1753760 valid patches in 56751-26-RECTO.png\n",
+      "* Found 2022777 valid patches in 56751-28-RECTO.png\n",
+      "* Found 2631208 valid patches in 56751-27-VERSO.png\n",
+      "* Found 2055086 valid patches in 56751-37-RECTO.png\n",
+      "* Found 600196 valid patches in 56751-25-RECTO.png\n",
+      "* Found 1352006 valid patches in 56751-31-RECTO.png\n",
+      "* Found 1954215 valid patches in 56751-30-RECTO.png\n",
+      "* Found 2715043 valid patches in 56751-35-RECTO.png\n"
+     ]
+    }
+   ],
    "source": [
     "from src.dataGenerator import DataGenerator\n",
     "\n",
@@ -127,6 +256,25 @@
     "    NOISE_MAX_ANGLE,\n",
     "    RESCALE,\n",
     "    flip=True,\n",
+    "    inputs_are_normals=True,\n",
+    ")\n",
+    "\n",
+    "gen_no_normals = DataGenerator(\n",
+    "    DATA_NAMES,\n",
+    "    BATCH_SIZE,\n",
+    "    EPOCH_SIZE,\n",
+    "    PATCH_SIZE,\n",
+    "    IMG_FOLDER,\n",
+    "    GROUNDTRUTH_FOLDER,\n",
+    "    PATCH_RATIO,\n",
+    "    ROTATION_STEP,\n",
+    "    NOISE_SCALE,\n",
+    "    NOISE_MAX_ANGLE, # unused if inputs_are_normals=False\n",
+    "    RESCALE,\n",
+    "    flip=True,\n",
+    "    inputs_are_normals=False,\n",
+    "    add_padding_needed=True,\n",
+    "    fun_img=lambda x: x / 255.0\n",
     ")"
    ]
   },
@@ -141,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
